--- a/api-reference/training-config.mdx
+++ b/api-reference/training-config.mdx
@@ -47,6 +47,62 @@ Configuration for experiment metadata and checkpointing behavior.
   Maximum number of model checkpoints to retain. Set to -1 for no limit.
 </ParamField>
 
+<ParamField path="wandb_config" type="WandbConfig | None" default="None">
+  Weights & Biases logging configuration for experiment tracking and visualization.
+</ParamField>
+
+## WandbConfig
+
+Configuration for Weights & Biases experiment tracking and logging.
+
+<ParamField path="project" type="str" required>
+  Weights & Biases project name for organizing experiments.
+</ParamField>
+
+<ParamField path="entity" type="str | None" default="None">
+  Weights & Biases team/organization name. If None, uses the default entity associated with your API key.
+</ParamField>
+
+<ParamField path="run_name" type="str | None" default="None">
+  Custom run name for the experiment. If None, uses the MetaConfig name or auto-generates one.
+</ParamField>
+
+<ParamField path="tags" type="List[str] | None" default="None">
+  List of tags to associate with the run for easy filtering and organization.
+</ParamField>
+
+<ParamField path="notes" type="str | None" default="None">
+  Optional notes or description for the experiment run.
+</ParamField>
+
+<ParamField path="log_model" type="bool" default="False">
+  Whether to log the model as a Weights & Biases artifact for version control.
+</ParamField>
+
+<ParamField path="log_frequency" type="int" default="100">
+  Frequency (in steps) for logging metrics to Weights & Biases.
+</ParamField>
+
+<ParamField path="log_gradients" type="bool" default="False">
+  Whether to log gradient histograms (can impact performance).
+</ParamField>
+
+<ParamField path="log_parameters" type="bool" default="False">
+  Whether to log parameter histograms (can impact performance).
+</ParamField>
+
+<ParamField path="watch_model" type="str | None" default="None">
+  Model watching mode for logging gradients and parameters:
+  - `"gradients"`: Log gradient histograms
+  - `"parameters"`: Log parameter histograms
+  - `"all"`: Log both gradients and parameters
+  - `None`: Disable model watching
+</ParamField>
+
+<ParamField path="config" type="dict | None" default="None">
+  Additional configuration dictionary to log to Weights & Biases.
+</ParamField>
+
 ## DataConfig
 
 Configuration for training data and objectives. Can be specified as a single instance or list for multi-task learning.
