adding new files

--- a/installation-setup.mdx
+++ b/installation-setup.mdx
@@ -308,19 +308,11 @@ The Nolano team provides comprehensive support for installation and ongoing main
   - **Response Time**: Within a single call to the founders phone numbers
 </Card>
 
-## Next Steps
+## Model Setup
 
 After installation, you're ready to start your foundation model research:
 
 <CardGroup cols={3}>
-  <Card
-    title="Quick Start"
-    icon="rocket"
-    href="/quickstart"
-    color="#935095"
-  >
-    Get your first model training in under an hour
-  </Card>
   <Card
     title="Data Preparation"
     icon="database"
@@ -337,8 +329,16 @@ After installation, you're ready to start your foundation model research:
   >
     Explore different model architectures and settings
   </Card>
+  <Card
+    title="Training Configuration"
+    icon="rocket"
+    href="/training"
+    color="#935095"
+  >
+    See more on configuring your model
+  </Card>
 </CardGroup>
 
 <Note>
-  **Need Help?** Join our [Discord community](https://discord.gg/nolano) or reach out to [support](mailto:hello@nolano.ai) for assistance with installation and setup.
+  **Need Help?** Reach out to [support](mailto:hello@nolano.ai) for assistance with installation and setup.
 </Note>
