--- a/introduction.mdx
+++ b/introduction.mdx
@@ -30,19 +30,19 @@ We allow AI researchers to focus on what matters most: **breakthrough innovation
 Our platform eliminates the boilerplate parts of foundation model research so you can focus on pushing the frontier:
 
 <AccordionGroup>
-  <Accordion title="🔧 Engineering Setup" icon="wrench">
+  <Accordion title="Engineering Setup" icon="wrench">
     Months of engineering setup for distributed training across clusters - we handle the infrastructure complexity so you can focus on model innovation.
   </Accordion>
   
-  <Accordion title="🖥️ HPC Expertise" icon="microchip">
+  <Accordion title="HPC Expertise" icon="microchip">
     Deep expertise in HPC, CUDA, parallelization strategies, and hardware optimization - no need to become a systems expert to train foundation models.
   </Accordion>
   
-  <Accordion title="🗄️ Data Pipelines" icon="database">
+  <Accordion title="Data Pipelines" icon="database">
     Redundant implementation of data loaders, training loops, and evaluation pipelines - our battle-tested pipelines handle petabyte-scale datasets efficiently.
   </Accordion>
   
-  <Accordion title="⚙️ Configuration Management" icon="gear">
+  <Accordion title="Configuration Management" icon="gear">
     Complex configuration management across different experiments and modalities - simplified configuration with intelligent defaults and validation.
   </Accordion>
 </AccordionGroup>
