fixing minor changes on quickstart

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,7 +8,7 @@ description: 'Start building foundation models in minutes'
 Get your first foundation model training in under an hour with these simple steps.
 
 <Note>
-  **Two Ways to Work with Nolano.AI**: This guide shows both the **Python SDK** (`pynolano`) for creating configuration files and the **CLI** (`nolano`) for executing operations. Both work together seamlessly - you write configs with the SDK and run them with the CLI.
+  **Two Ways to Work with Nolano AI**: This guide shows both the *Python SDK* (`pynolano`) for creating configuration files and the *CLI* (`nolano`) for executing operations. Both work together seamlessly - you write configs with the SDK and run them with the CLI.
 </Note>
 
 <Steps>
