--- a/installation-setup.mdx
+++ b/installation-setup.mdx
@@ -323,7 +323,7 @@ After installation, you're ready to start your foundation model research:
   </Card>
   <Card
     title="Model Configuration"
-    icon="brain"
+    icon="cube"
     href="/model-configuration"
     color="#6F3A71"
   >
